--- a/lession2/something.css
+++ b/lession2/something.css
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=BenchNine|Frijole&display=swap');
 
 h1, h2, h3, h4, h5, h6{
-  font-family: 'Frijole', cursive;
+  font-family: 'Roboto', sans-serif;
   
   padding: 0.5em; 
   
 }
 
+header{
+  color:white;
+  text-align: center;
+}
 body{
   font-family: 'Roboto', sans-serif;
   background-color:  blue;
@@ -22,67 +26,71 @@ main{
 p{
   margin-top: -1em;
   padding: 1em;
-  
 }
 
 .grid{
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
   
 
 .h1{
-grid-column: 1/3;
+grid-column: 2/3;
 grid-row: 1;
 text-align: center;}
 
 
 .h2{
-  grid-column: 1/3;
+  grid-column: 2/3;
   grid-row: 4;
   text-align: center;}
 
 .h3{
-  grid-column: 1/3;
+  grid-column: 2/3;
   grid-row: 7;
   text-align: center;}
 
-.pc1{
+/*.pc1{
   grid-column: 1/3;
+  grid-row: 1;
+  width: 100%;
+}*/
+
+.pc2{grid-column: 2/3;
   grid-row: 2;
   width: 100%;}
 
-.pc2{
-  grid-column: 1/2;
-  grid-row: 3;
-  width: 50%;}
+/*.pc3{grid-column: 1/3;
+     grid-row: 3;
+     width: 100%;}*/
 
-.pc3{grid-column: 1/3;
-     grid-row: 5;
-     width: 100%;}
+.pc4{grid-column: 2/3;
+    grid-row: 5;
+    width: 100%;}
 
-.pc4{grid-column: 1/2;
-    grid-row: 6;
-    width: 50%;}
-
-.pc5{grid-column: 1/3;
+/*.pc5{grid-column: 1/3;
 grid-row: 8;
-width: 100%;}
+width: 100%;}*/
 
-.pc6{ grid-column: 1/2;
-grid-row: 9;
-width: 50%;}
+.pc6{grid-column: 2/3;
+  grid-row: 8;
+  width: 100%;}
 
 .pa1{grid-column: 2/3;
-  grid-row: 3;}
+  grid-row: 3;
+  padding-top: 20%;}
 
 
 
 .pa2{grid-column: 2/3;
-  grid-row: 6;}
+  grid-row: 6;
+  padding-top: 20%;
+}
 
 
 
 .pa3{grid-column: 2/3;
-  grid-row: 9;}
+  grid-row: 9;
+  padding-top: 20%;
+} 
 
