--- a/lession2/something.css
+++ b/lession2/something.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=BenchNine|Frijole&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@100&display=swap');
 h1, h2, h3, h4, h5, h6{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Fraunces', serif;
   
   padding: 0.5em; 
   
