--- a/lesson4/css/normalize.css
+++ b/lesson4/css/normalize.css
@@ -347,14 +347,19 @@ body {
    
    
    
-   hr{width: auto;
-  
+   hr{
+     width: auto;
   }
    
   .grid{
-  display: grid;
-  border-radius: 15px;
-  grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    align-self: center;
+    justify-content:center;
+  }
+
+  .grid2{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
   }
 
   .part2{
@@ -365,7 +370,7 @@ body {
 
   .part{
   grid-row: 3;
-  grid-column: 2/3;
+  grid-column: 2/2;
   text-align: center;
   }
    /**
@@ -379,7 +384,10 @@ body {
   font-family: 'Varela Round', sans-serif;
   padding: 1em;
 }
-   
+   .mainMenu{
+    text-align: center;
+   }
+
    li{
      margin-top: -1em;
      padding: 1em;
@@ -410,12 +418,12 @@ body {
   @media(min-width: 769px){
     .hamIcon{
       display: none;
-      
     }
     
   }
 
-  div{ text-align: center;}
+  div{ text-align: center;
+  }
 
    body{
      color: #212E25;
@@ -440,7 +448,7 @@ body {
   }
 
   img{
-    width: 15%;
+    width: 20%;
     height: auto;
     }
 
