--- a/lesson7/css/normalize.css
+++ b/lesson7/css/normalize.css
@@ -330,7 +330,7 @@ template {
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Varela+Round&display=swap');
 
 
-     /**
+     /*
  * Remove the margin in all browsers.
  */
 
@@ -350,14 +350,6 @@ body {
    hr{
      width: auto;
   }
-   
-  
-
-  .grid2{
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr;
-  }
-
   
    /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -366,14 +358,15 @@ body {
 
  h1{
   font-size: 2em;
-  margin: 0.67em 0;
   font-family: 'Varela Round', sans-serif;
-  padding: 1em;
+  padding: .25em;
+  
  }
 
  h2, h3, h4, h5, h6{
   font-family: 'Varela Round', sans-serif;
-  padding: 1em;
+  padding: .25em;
+  
  }
 
  ul{
@@ -382,11 +375,8 @@ body {
  }
    li{
      margin-top: -1em;
-     padding: 1em;
-     
+     padding: 1em; 
    }
-  
-
 
   nav{
     background-color: #25263F;
@@ -401,69 +391,6 @@ body {
     color:#C7EDCB;
   }
 
-  @media(max-width: 768px){
-    
-    .mainMenu{
-      display:none;
-    }
-    .mainMenu.toggleCls{
-        display: block;
-        text-align: left;
-        list-style: none;
-    }
-    .grid.toggleCls{
-      display: flex;
-      align-self: center;
-      justify-content:center;
-    }
-  }
-
-  @media(min-width: 769px){
-    .hamIcon{
-      display: none;
-    }
-    
-
-    .mainMenu{
-       display: grid;
-       grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-       grid-template-rows: auto; 
-       /*display: flex;
-       list-style: none;*/
-       text-align: center;
-      }
-      
-      .p1{
-       grid-row: 1;
-       grid-column: 1/2;
-      }
-   
-      .p2{
-        grid-row: 1;
-        grid-column: 2/3;
-      }
-      .p3{
-        grid-row: 1;
-        grid-column: 3/4;
-      }
-      .p4{
-        grid-row: 1;
-        grid-column: 4/5;
-      }
-      .p5{
-        grid-row: 1;
-        grid-column: 5/6;
-      }
-      .p6{
-        grid-row: 1;
-        grid-column: 6/7;
-      }
-      .p7{
-        grid-row: 1;
-        grid-column: 7/8;
-      }
-  }
-  
   div{
     text-align: center;
   }
@@ -472,23 +399,15 @@ body {
      color: #212E25;
      background-color: #C7EDCB;
    }
-
-  .titleThing{
-    display: flex;
-    background-color: #24563D;
-    color:#DCFFFD;
-    align-self: center;
-    justify-content:center;
-  }
-
-  .pod{
-    width: 20%;
-    height: auto;
-  }
   
+  .ti{
+    text-align: center;
+  }
+
   .font5{
     background-color: #25263F;
   }
+
   nav li:hover { 
     color: #DCFFFD;
   }
@@ -496,6 +415,7 @@ body {
   nav a:hover { 
     color: #DCFFFD;
   }
+
 
   .part1{
     grid-row: 1;
@@ -520,7 +440,7 @@ body {
  }
 
   .part2{
-    grid-column: 2;
+    grid-column: 2/3;
     grid-row: 2;
     text-align: center;
     color: #DCFFFD;
@@ -529,27 +449,49 @@ body {
     margin-top: 50%;
   }
 
-  
-
   .part3{
-   grid-row: 4;
+   grid-row: 3;
    grid-column: 2/3;
    text-align: center;
   }
 
   .part4{
-   grid-row: 5;
-   grid-column: 2/3;
+   grid-column: 1/4;
+   grid-row: 4;
    text-align: center;
    background-color: #25263F;
    color: #C7EDCB;
   }
 
+  #Incard2{
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows:  1fr 1fr 1fr;
+  }
+
+  .forc1{
+   grid-row: 1;
+  }
+
+  .forc2{
+    grid-row: 2;
+  }
+
+  .forc3{
+    grid-row: 3;
+  }
+
   .part5{
-   grid-row: 6;
-   grid-column: 2/3;
+   grid-row: 5;
+   grid-column: 1/3;
    text-align: center;
    }
+
+  .picnic{
+    grid-row: 5;
+    grid-column: 3/4;
+    width: auto;
+    margin: 2% 2% 2% 2%;
+  }
 
   .foot{
     text-align: center;
@@ -600,51 +542,6 @@ body {
   height: auto;
   background-color: #C7EDCB;
 }
-
-.class1{
-grid-column: 1;
-grid-row: 1;
-}
- 
-.class2{
-grid-column: 2;
-grid-row: 1;
-}
- 
-.class3{
-grid-column: 3;
-grid-row: 1;
-}
- 
-.class4{
-grid-column: 1;
-grid-row: 2;
-}
- 
-.class5{
-grid-column: 2;
-grid-row: 2;
-}
- 
-.class6{
-grid-column: 3;
-grid-row: 2;
-}
- 
-.class7{
-grid-column: 1;
-grid-row: 3;
-}
- 
-.class8{
-grid-column: 2;
-grid-row: 3;
-}
- 
-.class9{
-grid-column: 3;
-grid-row: 3;
-}
  
 image{
   min-width: 50px;
@@ -660,7 +557,354 @@ hr{
   width: auto;
 }
 
-/*.something{
- background-color: #212E25;
- grid-row: ;
-}*/
+form{
+ margin: 0 auto;
+ text-align: center;
+ }
+
+.form1{
+  grid-column: 2/3;
+  grid-row: 2;
+}
+
+.form2{
+  grid-column: 2/3;
+  grid-row: 3;
+}
+
+.grid3{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+header{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  background-color: #24563D;
+  color:#DCFFFD;
+  height: auto;
+}
+
+header img{
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+header h1{
+grid-column: 2/3;
+grid-row: 1/2;
+}
+
+
+
+
+@media(max-width: 768px){
+
+  header h3{
+    grid-column: 1/3;
+    grid-row: 2/3;
+    text-align: center;
+  }
+
+  header img{
+    max-width: 152px;
+    height: auto;
+  }
+
+  .mainMenu{
+      display:none;
+  }
+    .mainMenu.toggleCls{
+      display: block;
+      text-align: left;
+      list-style: none;
+    }
+    .grid.toggleCls{
+      display: flex;
+      align-self: center;
+      justify-content:center;
+    }
+
+    #Incards{
+      display: grid;
+      grid-template-columns: 1fr;
+      justify-items: center;
+      text-align: center;
+    }
+
+    .grid2{
+      display: grid;
+      grid-template-columns: 1fr;
+      justify-items: center;
+      text-align: center;
+    }
+    .class1{
+      grid-column: 1;
+      grid-row: 1;
+      }
+       
+  .class2{
+      grid-column: 1;
+      grid-row: 2;
+      }
+       
+  .class3{
+      grid-column: 1;
+      grid-row: 3;
+      }
+       
+  .class4{
+      grid-column: 1;
+      grid-row: 4;
+      }
+       
+  .class5{
+      grid-column: 1;
+      grid-row: 5;
+      }
+       
+  .class6{
+      grid-column: 1;
+      grid-row: 6;
+      }
+       
+  .class7{
+      grid-column: 1;
+      grid-row: 7;
+      }
+       
+  .class8{
+      grid-column: 1;
+      grid-row: 8;
+      }
+       
+  .class9{
+      grid-column: 1;
+      grid-row: 9;
+      }
+  }
+
+@media(min-width: 769px),(max-width: 1049){
+    
+   header h3{
+     grid-column: 2/3;
+     grid-row: 2/3;
+   }
+
+    header img{
+      width: 40%;
+      height: auto;
+    }
+
+    .hamIcon{
+      display: none;
+      }
+
+    .grid2{
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      justify-items: center;
+      text-align: center;
+      }
+
+    .mainMenu{
+       display: grid;
+       grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+       grid-template-rows: auto; 
+       text-align: center;
+      }
+      
+    .p1{
+       grid-row: 1;
+       grid-column: 1/2;
+      }
+   
+    .p2{
+        grid-row: 1;
+        grid-column: 2/3;
+      }
+    .p3{
+        grid-row: 1;
+        grid-column: 3/4;
+      }
+    .p4{
+        grid-row: 1;
+        grid-column: 4/5;
+      }
+    .p5{
+        grid-row: 1;
+        grid-column: 5/6;
+      }
+    .p6{
+        grid-row: 1;
+        grid-column: 6/7;
+      }
+    .p7{
+        grid-row: 1;
+        grid-column: 7/8;
+      }
+   
+      .Incard{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        text-align: center;
+        
+      }
+  
+      .Incard:nth-child(even) .card2{
+        grid-column: 1;
+        
+      } 
+  
+      .Incard:nth-child(even) .card{
+        grid-column: 2;
+        grid-row: 1;
+        
+      }
+  
+      .Incard:nth-child(odd) .card{
+        grid-column: 1;
+        
+      }
+      
+      .Incard:nth-child(odd) .card2{
+        grid-column: 2;
+        
+      }
+  
+      .card{
+        margin: 1em;
+      }
+
+      .card2{
+        margin:1em;
+      }
+
+    .class1{
+      grid-column: 1;
+      grid-row: 1;
+      }
+       
+      .class2{
+      grid-column: 2;
+      grid-row: 1;
+      }
+       
+      .class3{
+      grid-column: 1;
+      grid-row: 2;
+      }
+       
+      .class4{
+      grid-column: 2;
+      grid-row: 2;
+      }
+       
+      .class5{
+      grid-column: 1;
+      grid-row: 3;
+      }
+       
+      .class6{
+      grid-column: 2;
+      grid-row: 3;
+      }
+       
+      .class7{
+      grid-column: 1;
+      grid-row: 4;
+      }
+       
+      .class8{
+      grid-column: 2;
+      grid-row: 4;
+      }
+       
+      .class9{
+      grid-column: 1;
+      grid-row: 5;
+      }
+  }
+  
+@media(min-width:1050px){
+
+    header img{
+      width: 40%;
+      height: auto;
+    }
+
+    header h3{
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
+
+    .mainMenu{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows: auto; 
+      text-align: center;
+     }
+
+    .grid2{
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
+      justify-items: center;
+      text-align: center;
+    }
+  
+    #Incards{
+      display:grid;
+      grid-template-columns: repeat(2,1fr);
+      grid-template-rows:1fr 1fr;
+      text-align: center;
+      justify-items: center;
+    }
+    
+      .class1{
+      grid-column: 1;
+      grid-row: 1;
+      }
+       
+      .class2{
+      grid-column: 2;
+      grid-row: 1;
+      }
+       
+      .class3{
+      grid-column: 3;
+      grid-row: 1;
+      }
+       
+      .class4{
+      grid-column: 1;
+      grid-row: 2;
+      }
+       
+      .class5{
+      grid-column: 2;
+      grid-row: 2;
+      }
+       
+      .class6{
+      grid-column: 3;
+      grid-row: 2;
+      }
+       
+      .class7{
+      grid-column: 1;
+      grid-row: 3;
+      }
+       
+      .class8{
+      grid-column: 2;
+      grid-row: 3;
+      }
+       
+      .class9{
+      grid-column: 3;
+      grid-row: 3;
+      }
+  }
+  
