--- a/WeatherSite/css/normalize.css
+++ b/WeatherSite/css/normalize.css
@@ -407,6 +407,7 @@ body {
   .font5{
     background-color: #25263F;
   }
+
   nav li:hover { 
     color: #DCFFFD;
   }
@@ -455,11 +456,29 @@ body {
   }
 
   .part4{
-   grid-column: 1/4;
-   grid-row: 4;
+    grid-row: 4;
+    grid-column: 1/4;
    text-align: center;
    background-color: #25263F;
    color: #C7EDCB;
+  }
+
+  #Incard2{
+    display: grid;
+   grid-template-columns: repeat(5,1fr);
+   grid-template-rows: 1fr;
+  }
+
+  .forc1{
+   grid-row: 1;
+  }
+
+  .forc2{
+    grid-row: 2;
+  }
+
+  .forc3{
+    grid-row: 3;
   }
 
   .part5{
@@ -580,7 +599,8 @@ grid-row: 1/2;
 
 
 
-@media(max-width: 768px){
+
+@media(min-width: 0px){
 
   header h3{
     grid-column: 1/3;
@@ -666,7 +686,7 @@ grid-row: 1/2;
       }
   }
 
-@media(min-width: 769px),(max-width: 1049){
+@media(min-width: 769px) {
     
    header h3{
      grid-column: 2/3;
@@ -725,34 +745,32 @@ grid-row: 1/2;
         grid-row: 1;
         grid-column: 7/8;
       }
-   
-      .Incard{
+      
+      .Incards{
         display: grid;
         grid-template-columns: 1fr 1fr;
         justify-items: center;
-        text-align: center;
-        
+        text-align: center; 
       }
   
-      .Incard:nth-child(even) .card2{
+      .Incards:nth-child(even) .card2{
         grid-column: 1;
         
       } 
-  
-      .Incard:nth-child(even) .card{
+
+      .Incards:nth-child(even) .card{
         grid-column: 2;
-        grid-row: 1;
         
       }
   
-      .Incard:nth-child(odd) .card{
+      .Incards:nth-child(odd) .card{
         grid-column: 1;
         
       }
       
-      .Incard:nth-child(odd) .card2{
+      .Incards:nth-child(odd) .card2{
         grid-column: 2;
-        
+        grid-row: 1;
       }
   
       .card{
@@ -763,7 +781,7 @@ grid-row: 1/2;
         margin:1em;
       }
 
-    .class1{
+     .class1{
       grid-column: 1;
       grid-row: 1;
       }
@@ -828,26 +846,50 @@ grid-row: 1/2;
       text-align: center;
      }
 
-    .grid2{
+    #grid2{
       display: grid;
-      grid-template-columns: repeat(3,1fr);
+      grid-template-columns: 1fr 1fr 1fr;
       justify-items: center;
       text-align: center;
     }
   
-    #Incards{
+    .Incards{
       display:grid;
-      grid-template-columns: repeat(2,1fr);
-      grid-template-rows:1fr 1fr;
+      grid-template-columns: 1fr;
       text-align: center;
       justify-items: center;
     }
     
+      .card{
+        grid-row: 1;
+      }
+
+      .card2{
+        grid-row: 2;
+      }
+
+      .Incards:nth-child(even) .card2{
+        grid-column: 1;
+      } 
+
+      .Incards:nth-child(even) .card{
+        grid-column: 1;
+      }
+  
+      .Incards:nth-child(odd) .card{
+        grid-column: 1;
+      }
+      
+      .Incards:nth-child(odd) .card2{
+        grid-column: 1;
+        grid-row: 2;
+      }
+
       .class1{
       grid-column: 1;
       grid-row: 1;
       }
-       
+
       .class2{
       grid-column: 2;
       grid-row: 1;
@@ -887,5 +929,7 @@ grid-row: 1/2;
       grid-column: 3;
       grid-row: 3;
       }
+
+      
   }
   
